--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,14 +2,14 @@
   .side-header
     .side-header__box
       %p.side-header__box__username
-        = current_user.name
+        masa
       %ul.side-header__box__menu
         %li.side-header__box__edit-user
           = link_to "#" do
             = icon('fas', 'edit')
         %li.side-header__box__new-groups
-          = link_to edit_user_path(current_user) do
-            = icon('fas', 'cog', class: 'icon')  
+          = link_to "#" do
+            = icon('fas', 'cog')  
   .groups
     .group
       %p.group__group-name
