--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,14 +5,16 @@
         = current_user.name
       %ul.side-header__box__menu
         %li.side-header__box__edit-user
-          = link_to "#" do
+          = link_to new_group_path do
             = icon('fas', 'edit')
         %li.side-header__box__new-groups
           = link_to edit_user_path(current_user) do
             = icon('fas', 'cog', class: 'icon')  
   .groups
-    .group
-      %p.group__group-name
-        test
-      %p.group__latest-message
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .groups__group
+        = link_to edit_group_path(group) do
+          .groups__group__group-name
+            = group.name
+          .groups__group__latest-message
+            まだメッセージがありません
