--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -61,7 +61,7 @@
 
   .chat-main{
     width: calc(100% - 300px);
-    background-color: #ffffff;
+   
   
     .main-header{
       height: 100px;
@@ -69,8 +69,9 @@
       border-bottom: 1px solid #eeeeee;
       display: flex;
       justify-content: space-between;
+      padding: 0 40px;
       &__left-box {
-        margin: 35px 0 40px 15px;
+        margin-top: 35px;
         h2 {
           color: #333333;
           font-size: 20px;
@@ -78,6 +79,8 @@
         }
         ul {
           display: flex;
+          font-size: 12px;
+          color: #999999;
           li {
             color: #999999;
             font-size: 12px;
@@ -96,68 +99,90 @@
         text-align: center;
         text-decoration: none;
         color: #38aef0;
-         
+      
       }
     }
     
     .message-list {
       height: calc(100vh - 190px);
       background-color: #fafafa;
-      &__message {
-        padding-top: 35px;
-        padding-left: 40px;
-        padding-bottom: 46px;
-        
-        &__upper-info {
-          padding-bottom: 12px;
-          display: flex;
+      padding: 46px 40px;
+      width: 100%;
+      // position: absolute;
+      // top: 100px;
+      overflow: scroll;
+      }
     
-          &__talker {
-            color: #333333;
-            font-size: 16px;
-          }
-          &__date {
-            color:#999999;
-            font-size: 12px;
-            margin-left: 10px;
-          }
+    .message {
+      padding-top: 35px;
+      padding-left: 40px;
+      padding-bottom: 46px;
+      
+      
+      &__info {
+        padding-bottom: 12px;
+        display: flex;
+  
+        &__talker {
+          color: #333333;
+          font-size: 16px;
+          font-weight: bold;
         }
-        &__message__text {
-          color: #434A54;
-          font-size: 14px;
-        }  
+        &__date {
+          color:#999999;
+          font-size: 12px;
+          margin-left: 10px;
+        }
+      }
+      &__text {
+        color: #434A54;
+        font-size: 14px;
+        
       }
     }
+
     .message-form {
       height: 90px;
       background-color: #d2d2d2;
       padding: 20px 40px;
+      width: calc(100% - 300px);
+      position: fixed;
+      bottom: 0;
+      
+      
       
       form {
         display: flex;
+
         .input-box {
           width: 100%;
           display: flex;
           position: relative;
           
-          &__text {
+        
+        
+    
+          &__text{
             height: 50px;
             width: 100%;
             color: #434a54;
             border-style: none;
             padding: 0 40px 0 10px; 
-          }
-          &__image {
+          
+           
+          
+            &__image {
               cursor: pointer;
               position: absolute;
               top: 10px;
-              right: 10px;
-            &__file {
+              right: 125px;
+              &__file {
               display: none;
             }
-
           }
-        }
+          
+        }  
+        // }
         .submit-btn {
           width: 100px;
           height: 50px;
@@ -168,5 +193,6 @@
           cursor: pointer;
         }
       }
+     }
     }
   }
