--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -13,8 +13,8 @@
   .groups
     - current_user.groups.each do |group|
       .groups__group
-        = link_to edit_group_path(group) do
+        = link_to  group_messages_path(group) do
           .groups__group__group-name
             = group.name
           .groups__group__latest-message
-            まだメッセージがありません
+            = group.show_last_message
