--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -1,15 +1,17 @@
 * {
-  box-sizing: border-box;
+  // box-sizing: border-box;
 }
+
 
 .wrapper {
   display: flex;
-  height: 100vh;
+  height: auto;
+  width: auto;
+  
 }
 
   .chat-side {
-    width: 300px;
-    background-color: #253141;
+    width: 300px; 
     color: #ffffff;
     font-weight: bold;
   
@@ -17,6 +19,7 @@
       background-color: #253141;
       height: 100px;
       display: flex;
+      position: fixed;
       align-items: center;
         .side-header__box {
         height: 20px;
@@ -40,6 +43,8 @@
     .groups {
       background-color: #2f3e51;
       height: calc(100vh - 100px);
+      overflow: scroll;
+      padding-top: 100px;
       &__group {
         padding: 20px 20px 40px 20px;
         color: white;
@@ -61,7 +66,6 @@
 
   .chat-main{
     width: calc(100% - 300px);
-   
   
     .main-header{
       height: 100px;
@@ -70,6 +74,8 @@
       display: flex;
       justify-content: space-between;
       padding: 0 40px;
+      position: fixed;
+      width: calc(100% - 300px);
       &__left-box {
         margin-top: 35px;
         h2 {
@@ -94,7 +100,7 @@
         width: 72px;
         height: 40px;
         margin-top: 28px;
-        margin-right: 40px;
+        margin-right: 80px;
         line-height: 40px;
         text-align: center;
         text-decoration: none;
@@ -107,10 +113,9 @@
       height: calc(100vh - 190px);
       background-color: #fafafa;
       padding: 46px 40px;
-      width: 100%;
-      // position: absolute;
-      // top: 100px;
+      padding-top: 100px;
       overflow: scroll;
+      
       }
     
     .message {
@@ -150,7 +155,6 @@
       bottom: 0;
       
       
-      
       form {
         display: flex;
 
@@ -158,24 +162,22 @@
           width: 100%;
           display: flex;
           position: relative;
+          margin-top: 20px;
           
         
-        
-    
           &__text{
             height: 50px;
             width: 100%;
             color: #434a54;
             border-style: none;
             padding: 0 40px 0 10px; 
-          
-           
+            // line-height: center;
           
             &__image {
               cursor: pointer;
               position: absolute;
               top: 10px;
-              right: 125px;
+              right: 210px;
               &__file {
               display: none;
             }
@@ -188,6 +190,7 @@
           height: 50px;
           padding: 0 30px;
           margin-left: 15px;
+          margin-right: 80px;
           background-color: #38aef0;
           color: white;
           cursor: pointer;
