--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -1,4 +1,5 @@
 * {
+  box-sizing: border-box;
  }
 
 
@@ -18,7 +19,6 @@
       background-color: #253141;
       height: 100px;
       display: flex;
-      position: fixed;
       align-items: center;
         .side-header__box {
         height: 20px;
@@ -43,7 +43,7 @@
       background-color: #2f3e51;
       height: calc(100vh - 100px);
       overflow: scroll;
-      padding-top: 100px;
+      
       &__group {
         padding: 20px 20px 40px 20px;
         color: white;
@@ -65,6 +65,7 @@
 
   .chat-main{
     width: calc(100% - 300px);
+    float: left;
   
     .main-header{
       height: 100px;
@@ -73,8 +74,7 @@
       display: flex;
       justify-content: space-between;
       padding: 0 40px;
-      position: fixed;
-      width: calc(100% - 300px);
+     
       &__left-box {
         margin-top: 35px;
         h2 {
@@ -94,17 +94,15 @@
       }
       &__edit-btn {
         color: #38aef0;
-        font-size: 16px;
+       
         border: 1px solid #38aef0;
-        width: 72px;
         height: 40px;
-        margin-top: 28px;
-        margin-right: 80px;
         line-height: 40px;
-        text-align: center;
+        margin-top: 30px;
+        padding: 0 20px;
+        position: absolute;
+        right: 40px;
         text-decoration: none;
-        color: #38aef0;
-      
       }
     }
     
@@ -112,15 +110,12 @@
       height: calc(100vh - 190px);
       background-color: #fafafa;
       padding: 46px 40px;
-      padding-top: 100px;
       overflow: scroll;
       
       }
     
     .message {
-      padding-top: 35px;
-      padding-left: 40px;
-      padding-bottom: 46px;
+      padding-bottom: 40px;
       
       
       &__info {
@@ -141,7 +136,7 @@
       &__text {
         color: #434A54;
         font-size: 14px;
-        
+        margin-bottom: 10px;
       }
     }
 
@@ -149,21 +144,14 @@
       height: 90px;
       background-color: #d2d2d2;
       padding: 20px 40px;
-      width: calc(100% - 300px);
-      position: fixed;
-      bottom: 0;
-      
       
       form {
         display: flex;
 
         .input-box {
           width: 100%;
-          display: flex;
           position: relative;
-          margin-top: 20px;
-          
-        
+         
           &__text{
             height: 50px;
             width: 100%;
@@ -176,24 +164,23 @@
               cursor: pointer;
               position: absolute;
               top: 10px;
-              right: 210px;
+              right: 10px;
               &__file {
               display: none;
+              }
             }
           }
+        } 
           
-        }  
         .submit-btn {
           width: 100px;
           height: 50px;
           padding: 0 30px;
           margin-left: 15px;
-          margin-right: 80px;
           background-color: #38aef0;
           color: white;
           cursor: pointer;
         }
       }
-     }
     }
   }
